--- a/src/public/style.css
+++ b/src/public/style.css
@@ -32,6 +32,7 @@ body {
     width: 100%;
     min-width: 300px;
     max-width: 500px;   
+    border: 2px solid darkgreen;
     border-radius: 10px;
 
     background-color: whitesmoke;
@@ -208,30 +209,85 @@ body {
 }
 
 #menu {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    background-color: seagreen;
+}
+
+
+#lists {
+    display: flex;
+    flex-direction: row;
+    height: 0;
+    width: 100%;
+    padding: 5px;
+    opacity: 0;
+
+}
+
+#lists .list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+
+    height: 50px;
+    width: 100px;
+    border: 2px solid white;
+    border-radius: 5px;
+    cursor: pointer;
+    background-color: seagreen;
+}
+
+#lists .list:hover {
+    filter: brightness(80%);
+}
+
+#lists .list + .list {
+    margin-left: 5px;
+}
+
+
+
+#menuButtons {
     height: 50px;
     width: 100%;
-    background-color: seagreen;
 
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    align-items: center;    
+    align-items: flex-end;
+    padding: 5px 0;
 }
 
 
-#menu label {
+#menuButtons label {
     cursor: pointer;
 }
 
 
-#menu label input {
+#menuButtons label input {
     display: none;
 }
 
-#menu label svg {
+#menuButtons label svg {
     fill: none;
     color: white;
 }
-#menu label svg:hover {
+#menuButtons label svg:hover {
     color: darkgreen;
+}
+
+#btnOpenMenu {
+    display: none;
+}
+#btnOpenMenu:checked + #menu {
+    height: 70%;
+}
+#btnOpenMenu:checked + #menu #lists {
+    height: 100%;
+    opacity: 100%;
 }
